--- a/GeoMapx.Web/Views/Diarias/Index.cshtml
+++ b/GeoMapx.Web/Views/Diarias/Index.cshtml
@@ -2,7 +2,9 @@
     ViewBag.Title = "Index";
     //Layout = "~/Views/Shared/_CleanLayout.cshtml";
 }
-<div ng-app="diariasApp" ng-controller="diariasController">
+
+<link href="../assets/global/plugins/datatables/plugins/bootstrap/datatable.bootstrap.min.css" rel="stylesheet" type="text/css" />
+<div ng-app="diariasApp" ng-controller="">
     <div class="clearfix">
         <a href="javascript:;" class="btn btn-sm blue">Nuevo<i class="fa fa-file-o"></i></a>
         <a href="javascript:;" class="btn btn-sm blue">Editar<i class="fa fa-edit"></i></a>
@@ -141,5 +143,75 @@
 
                 </div>
             </div>
+
+            <div class="col-md-6 ">
+                <!-- BEGIN EXAMPLE TABLE PORTLET-->
+                <div class="portlet light ">
+                    <div class="portlet-title">
+                        <div class="caption font-dark">
+                            <i class="icon-settings font-dark"></i>
+                            <span class="caption-subject bold uppercase">Basic</span>
+                        </div>
+                        <div class="tools"> <div class="dt-buttons"><a class="dt-button buttons-print btn dark btn-outline" tabindex="0" aria-controls="sample_1" href="#"><span>Print</span></a><a class="dt-button buttons-pdf buttons-html5 btn green btn-outline" tabindex="0" aria-controls="sample_1" href="#"><span>PDF</span></a><a class="dt-button buttons-csv buttons-html5 btn purple btn-outline" tabindex="0" aria-controls="sample_1" href="#"><span>CSV</span></a></div></div>
+                    </div>
+                    <div class="portlet-body">
+                        <table class="table table-striped table-bordered table-hover dt-responsive" width="100%" id="sample_1">
+                            <thead>
+                                <tr>
+                                    <th class="all">First name</th>
+                                    <th class="min-phone-l">Last name</th>
+                                    <th class="min-tablet">Position</th>
+                                    <th class="none">Office</th>
+                                    <th class="none">Age</th>
+                                    <th class="none">Start date</th>
+                                    <th class="desktop">Salary</th>
+                                    <th class="all">Extn.</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Tiger</td>
+                                    <td>Nixon</td>
+                                    <td>System Architect</td>
+                                    <td>Edinburgh</td>
+                                    <td>61</td>
+                                    <td>2011/04/25</td>
+                                    <td>$320,800</td>
+                                    <td>
+                                        <div class="btn-group pull-right">
+                                            <button class="btn green btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">
+                                                Tools
+                                                <i class="fa fa-angle-down"></i>
+                                            </button>
+                                            <ul class="dropdown-menu pull-right">
+                                                <li>
+                                                    <a href="javascript:;">
+                                                        <i class="fa fa-print"></i> Print
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:;">
+                                                        <i class="fa fa-file-pdf-o"></i> Save as PDF
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:;">
+                                                        <i class="fa fa-file-excel-o"></i> Export to Excel
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table> 
+                    </div>
+                </div>
             </div>
-            <script src="~/Scripts/app/diarias.js"></script>
+            </div>
+        </div>
+    </div>
+    <script src="~/Scripts/app/diarias.js"></script>
+    <script src="../assets/global/plugins/datatables/datatables.all.min.js" type="text/javascript"></script>
+    <script src="../assets/global/plugins/datatables/plugins/bootstrap/datatable.bootstrap.js" type="text/javascript"></script>
+    
